--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,29 @@ body {
     rgb(var(--background-start-rgb));
   font-family: "Calibri", sans-serif;
 }
+
+.spinner-border {
+  width: 2rem; /* Adjust the size as needed */
+  height: 2rem;
+  border: 4px solid transparent;
+  border-top-color: #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+.app-loader {
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
