--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,12 @@
   }
 }
 
+/* .bg-grid-pattern {
+  background-image: linear-gradient(to right, #1a2a3c 1px, transparent 1px),
+    linear-gradient(to bottom, #1a2a3c 1px, transparent 1px);
+  background-size: 40px 40px;
+} */
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,6 +30,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-image: linear-gradient(to right, #01040a 1px, transparent 1px),
+    linear-gradient(to bottom, #01040a 1px, transparent 1px);
+  background-size: 40px 40px; /* Adjust the grid size */
   font-family: "Calibri", sans-serif;
 }
 
@@ -35,13 +44,11 @@ body {
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
-.app-loader {
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+img {
+  image-rendering: -webkit-optimize-contrast; /* For Chrome (best performance) */
+  image-rendering: crisp-edges; /* For Firefox */
+  image-rendering: pixelated;
 }
 
 @keyframes spin {
@@ -51,4 +58,30 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* Global scrollbar styles for dark backgrounds */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(var(--background-end-rgb)); /* Dark background color */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #060606; /* Scrollbar thumb color */
+  border-radius: 10px;
+  border: 2px solid #0e0d0d; /* Matches the track color */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #060606; /* Scrollbar thumb color on hover */
+}
+
+::-webkit-scrollbar-corner {
+  background: rgb(
+    var(--background-end-rgb)
+  ); /* Dark corner color for both axes */
 }
